--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
-spring.application.name=biblioteca
+spring.datasource.url=jdbc:postgresql://${DB_HOST}:5432/${DB_NAME}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=12345
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.format-sql=true
